# KFCompileTool

./: .gitignore  Cargo.toml  Compile.py  CompileSettings.ini  README.md  TODO.md  kf_compile_tool.ini  kf_compile_tool.py  kfcompile.ini
.github/workflows/: build.yml  publish.yml
crates/kf_compile_tool/: cargo.toml  kfcompile.ini
crates/kf_compile_tool/src/: config_helper.rs  constants.rs  errors.rs  lib.rs  main.rs  types.rs  ucc_wrapper.rs  utility.rs
crates/kf_compile_tool/src/static/: CompileSettings.ini  kfcompile.ini
crates/kfct_lib/: cargo.toml
crates/kfct_lib/src/: lib.rs  post_handle_files.rs  pre_handle_files.rs  release_manager.rs  utility.rs
crates/kfct_lib/src/config_manager/: app_config.rs  steam_appid.rs
crates/tests/: cargo.toml  cli_tests.rs
src/: cli.rs  compressor.rs  constants.rs  errors.rs  kf_config.rs  lib.rs  main.rs  post_handle_files.rs  post_pass.rs  pre_pass.rs  release_manager.rs  steam_appid.rs  ucc_wrapper.rs  utility.rs
src/app_config/: mod.rs  parser.rs
src/config_manager/: app_config.rs  kf_config.rs  mod.rs  steam_appid.rs
src/operations/: cleanup.rs  directory_handler.rs  kf_config.rs  mod.rs  steam_appid.rs
src/release_manager/: mod.rs
src/stages/: mod.rs  post_pass.rs  pre_pass.rs  release_manager.rs  ucc.rs  uz2.rs
src/static/: DEFAULT_CONFIG.ini  DEFAULT_KF_CONFIG.ini
src/traits/: cleanup.rs  directory_handler.rs  kf_config.rs  steam_appid.rs
src/utils/: conflict_resolver.rs  io.rs  mod.rs  zip_extension.rs
tests/: missing_optional_key_config.ini  no_global_config.ini  no_mod_config.ini
