# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kf_compile_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
configparser = "3.*"
gumdrop = "0.8.*"
kfuz2_lib = "1.6"
tempfile = { version = "3", default-features = false }
thiserror = "2.*"
walkdir = "2.*"
zip = { version = "4", default-features = false, features = [
  "deflate-flate2-zlib-rs",
] }

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

